[package]
name = "kio-mq"
version = "0.1.0"
edition = "2021"
[package.metadata.cargo-commands]
exclude-examples = true
[dependencies]
async-backtrace = "0.2.7"
async-trait = "0.1.89"
atomig = { version = "0.4.3", features = ["derive", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
croner = { version = "3.0.0", features = ["serde"] }
crossbeam-queue = "0.3.12"
crossbeam-skiplist = "0.1.3"
deadpool-redis = { version = "0.22.0", default-features = false, features = [
  "serde",
  "rt_tokio_1",
], optional = true }
derive_more = { version = "2.0.1", features = [
  "display",
  "from",
  "debug",
  "from_str",
  "is_variant",
] }
dotenv = "0.15.0"
futures = { version = "0.3.31", features = ["executor"] }
num_cpus = "1.17.0"
redis = { version = "0.32.3", features = [
  "tokio-comp",
  "streams",
  "json",
], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
simd-json = { version = "*", features = ["serde", "known-key"] }
rocksdb = { version = "*", default-features = false, features = [
  "snappy",
  "multi-threaded-cf",
], optional = true }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "fs",
  "tracing",
] }
tokio-util = { version = "0.7.15", features = ["time", "rt"] }
typed-emitter = { git = "https://github.com/spencerjibz/typed-emitter.git", rev = "eafde7a6223f2acd63cc438ef6f3cbf300b3ce59" }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tempfile = { version = "3.23.0", optional = true }
arc-swap = "1.7.1"
crossbeam-utils = "0.8.21"
atomic_refcell = "0.1.13"
xutex = "0.2.0"
tracing = { version = "0.1.44", features = ["async-await"], optional = true }
parking_lot = { version = "0.12.5", features = ["send_guard"] }
[dev-dependencies]
criterion = "0.8"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ffmpeg-sidecar = { version = "*", features = ["download_ffmpeg"] }
rand = "*"
[dev-dependencies.console-subscriber]
version = "0.5"
features = ["env-filter"]
[features]
default = ["redis-store"]
rocksdb-store = ["dep:rocksdb", "dep:tempfile"]
tracing = ["dep:tracing"]
redis-store = ["dep:redis", "dep:deadpool-redis"]
[[bench]]
name = 'queue_bench'
harness = false
